OO-7482: Enhanced coach view with new columns and data